--- a/web-app/static/styles.css
+++ b/web-app/static/styles.css
@@ -1,7 +1,7 @@
 
 /* Churchill Styles */
 body.pageOne{
-    background-color: #B5C9C3;  
+    background-color: #885A89;  
      display: flex;
     align-items: center;
     justify-content: center;
@@ -21,7 +21,7 @@ body.pageOne{
 
 /* Jesus Styles */
 body.pageTwo{
-    background-color: #CAB1BD;  
+    background-color: #BCD4DE ;  
      display: flex;
     align-items: center;
     justify-content: center;
@@ -41,7 +41,7 @@ body.pageTwo{
 
 /* Devil Styles */
 body.pageThree{
-    background-color: #C3B5B9;  
+    background-color: #7B2642;  
     display: flex;
     align-items: center;
     justify-content: center;
@@ -55,6 +55,46 @@ body.pageThree{
 }
 
 #dvImg{
+    border-radius: 10px; 
+    border: 3px solid white;
+} 
+
+/*Rock Styles */
+body.pageFour{
+    background-color: #EE7B30;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0; 
+}
+
+#rockBox{
+    margin: auto;
+   
+}
+
+#rockImg{
+    border-radius: 10px; 
+    border: 3px solid white;
+} 
+
+/*Snail Styles*/
+body.pageFive{
+    background-color: #4A4E69;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0; 
+}
+
+#snailBox{
+    margin: auto;
+   
+}
+
+#snailImg{
     border-radius: 10px; 
     border: 3px solid white;
 } 
