--- a/web-app/static/styles.css
+++ b/web-app/static/styles.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Roboto', sans-serif;
+}
 
 /* Churchill Styles */
 body.pageOne{
@@ -98,4 +101,18 @@ body.pageFive{
     border-radius: 10px; 
     border: 3px solid white;
 } 
+
+/* Welcome Styles */
+body.pageSix{
+    background-color: #81B29A;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0; 
+}
+
+#welcomeBox{
+    margin: auto;
+}
 
