--- a/web-app/templates/stop.html
+++ b/web-app/templates/stop.html
@@ -6,6 +6,6 @@
         <div id="snailBox">
             <img src="{{url_for('static', filename='snail.jpg')}}" id="snailImg">
         </div>
-    <body>
+    </body>
 
  {% endblock %}
