--- a/web-app/templates/thumbsUp.html
+++ b/web-app/templates/thumbsUp.html
@@ -6,6 +6,6 @@
         <div id="jsBox">
             <img src="{{url_for('static', filename='js.jpg')}}" id="jsImg">
         </div>
-    <body>
+    </body>
 
  {% endblock %}
