--- a/web-app/templates/victory.html
+++ b/web-app/templates/victory.html
@@ -5,5 +5,5 @@
         <div id="chImgBox">
             <img src="{{url_for('static', filename='churchill.jpg')}}" id="chImg">
         </div>
-    <body>
+    </body>
  {% endblock %}
