--- a/web-app/templates/rock.html
+++ b/web-app/templates/rock.html
@@ -6,6 +6,6 @@
         <div id="rockBox">
             <img src="{{url_for('static', filename='rock.jpg')}}" id="rockImg">
         </div>
-    <body>
+    </body>
 
  {% endblock %}
