--- a/web-app/templates/thumbsDown.html
+++ b/web-app/templates/thumbsDown.html
@@ -6,6 +6,6 @@
         <div id="dvBox">
             <img src="{{url_for('static', filename='dv.jpg')}}" id="dvImg">
         </div>
-    <body>
+    </body>
 
  {% endblock %}
