--- a/web-app/templates/welcome.html
+++ b/web-app/templates/welcome.html
@@ -14,6 +14,6 @@
                 <li><a href="/stop">Stop</a></li>
             </ul>   
         </div>
-    <body>
+    </body>
 
  {% endblock %}
