--- a/web_app/templates/welcome.html
+++ b/web_app/templates/welcome.html
@@ -6,13 +6,19 @@
         <div id="welcomeBox">
             <h1>Welcome :/</h1>
 
-            <ul> 
-                <li><a href="/victory">Victory</a> </li>
-                <li><a href="/thumbsDown">Thumbs Down</a></li>
-                <li><a href="/thumbsUp">Thumbs Up</a></li>
-                <li><a href="/rock">Rock</a></li>
-                <li><a href="/stop">Stop</a></li>
-            </ul>   
+            <a href="/test">
+                <button> See Your Result</button>
+            </a>
+
+            <a href="/delete">
+                <button>delete all data</button>
+            </a>
+
+            <a href="/camera">
+                <button>trigger camera</button>
+            </a>
+
+              
         </div>
     </body>
 
